--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js --watch",
+    "start": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,32 +19,42 @@
   },
   "homepage": "https://github.com/Krewe-du-Code/Carnivale#readme",
   "dependencies": {
+    "@babel/preset-react": "^7.23.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "passport": "^0.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-map-gl": "^7.1.6",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
     "@babel/preset-env": "^7.23.5",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "autoprefixer": "^10.4.16",
     "babel": "^6.23.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.54.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpackbar": "^5.0.2"
