--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --watch",
-    "start": "nodemon server/index.js",
+    "start": "nodemon server/index.ts",
     "seed": "node server/db/seed.js"
   },
   "repository": {
@@ -21,16 +21,23 @@
   "homepage": "https://github.com/Krewe-du-Code/Carnivale#readme",
   "dependencies": {
     "@babel/preset-react": "^7.23.3",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.10.2",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "node-typescript": "^0.1.3",
     "passport": "^0.7.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
+    "react-router-dom": "^6.20.1",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2"
   },
