--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
+    // "noEmit": true, 
+    // "allowImportingTsExtensions": true,
   }
 }
