--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --watch",
-    "start": "nodemon server/index.js",
+    "start": "nodemon server/index.ts",
     "seed": "npx sequelize db:drop && npx sequelize db:create && node server/db/seed.js && npx sequelize db:seed:all"
-
   },
   "repository": {
     "type": "git",
@@ -23,7 +22,6 @@
   "dependencies": {
     "@babel/preset-react": "^7.23.3",
     "@types/jest": "^29.5.10",
-    "@types/node": "^20.10.2",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
@@ -39,12 +37,17 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.20.1",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.35.1",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
     "@babel/preset-env": "^7.23.5",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.3",
+    "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.16",
@@ -64,6 +67,7 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
