--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,17 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
+    "module": "commonjs",
+    "target": "es6",
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "sourceMap": true,
-    // "noEmit": true, 
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+    // "noEmit": true,
     // "allowImportingTsExtensions": true,
   }
 }
