--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cloudinary": "^1.41.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "node-typescript": "^0.1.3",
     "passport": "^0.7.0",
     "pg": "^8.11.3",
