--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cloudinary": "^1.41.0",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "node-typescript": "^0.1.3",
     "passport": "^0.7.0",
@@ -38,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.6",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.35.1",
@@ -49,6 +51,7 @@
     "@babel/preset-env": "^7.23.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
+    "@types/react-modal": "^3.16.3",
     "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
