--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
