--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Krewe-du-Code/Carnivale#readme",
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.3",
     "@babel/preset-react": "^7.23.3",
     "@types/jest": "^29.5.10",
     "@types/multer": "^1.4.11",
