--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.0",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.1",
     "lodash": "^4.17.21",
