--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.3",
     "@babel/preset-react": "^7.23.3",
+    "@mapbox/search-js-react": "^1.0.0-beta.18",
     "@types/jest": "^29.5.10",
     "@types/multer": "^1.4.11",
     "@types/react": "^18.2.41",
