--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^1.41.0",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
@@ -38,6 +39,7 @@
     "node-typescript": "^0.1.3",
     "passport": "^0.7.0",
     "pg": "^8.11.3",
+    "puppeteer": "^21.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
