--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-map-gl": "^7.1.6",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.35.1",
     "sequelize-cli": "^6.6.2",
