--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "puppeteer": "^21.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.6",
