--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.3",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-modal": "^3.16.3",
     "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
