CLIENT, SEED / updated seed data for presentation, add dayjs to eventmodal, new prod scripts

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "main": "index.jsx",
   "scripts": {
+    "build-prod": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --watch",
     "start": "nodemon server/index.ts",
+    "start-prod": "ts-node server/index.ts",
     "seed": "npx sequelize db:drop && npx sequelize db:create && ts-node server/db/seed.ts && npx sequelize db:seed:all",
     "scrape": "ts-node server/routes/scrapeEvents"
   },
