--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@auth0/auth0-react": "^2.2.3",
     "@babel/preset-react": "^7.23.3",
     "@mapbox/search-js-react": "^1.0.0-beta.18",
+    "@react-icons/all-files": "^4.1.0",
     "@types/jest": "^29.5.10",
     "@types/multer": "^1.4.11",
     "@types/react": "^18.2.41",
@@ -44,7 +45,6 @@
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.6",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.20.1",
@@ -88,6 +88,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpackbar": "^5.0.2"
   }
