--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "express-openid-connect": "^2.17.1",
+    "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "node-typescript": "^0.1.3",
     "pg": "^8.11.3",
