--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.jsx",
   "scripts": {
     "build-prod": "webpack --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "webpack --config webpack.config.js --watch",
     "start": "nodemon server/index.ts",
     "start-prod": "ts-node server/index.ts",
@@ -72,6 +72,7 @@
     "autoprefixer": "^10.4.16",
     "babel": "^6.23.0",
     "babel-loader": "^9.1.3",
+    "chai": "^5.1.0",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
@@ -81,6 +82,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
+    "mocha": "^10.3.0",
     "postcss-loader": "^7.3.3",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
