SERVER / organize seeders file structure, add it into server/db

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --config webpack.config.js --watch",
     "start": "nodemon server/index.ts",
     "start-prod": "ts-node server/index.ts",
-    "seed": "npx sequelize db:drop --env development && npx sequelize db:create && ts-node server/db/seed.ts && npx sequelize db:seed:all",
+    "seed": "npx sequelize db:drop --env development && npx sequelize db:create && ts-node server/db/seed.ts && npx sequelize db:seed --seed devSeedData.js",
     "scrape": "ts-node server/routes/scrapeEvents"
   },
   "repository": {
