--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,6 @@
 const path = require('path')
 
 module.exports = {
-  'config': path.resolve('server','db','config','postgresConfig.json')
+  'config': path.resolve('server','db','config','postgresConfig.json'),
+  'seeders-path': path.resolve('server','db','seeders')
 }
