--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.jsx",
   "scripts": {
     "build-prod": "webpack --config webpack.config.js",
-    "compile-test": "tsc --project ./test",
-    "test": "npx sequelize db:drop --env test && npx sequelize db:create --env test && mocha",
-    "mocha": "mocha",
+    "test": "npx sequelize db:drop --env test && npx sequelize db:create --env test  && export NODE_ENV='test' && ts-mocha --config test/.mocharc.json -p test/tsconfig.json",
     "build": "webpack --config webpack.config.js --watch",
     "start": "nodemon server/index.ts",
     "start-prod": "ts-node server/index.ts",
@@ -94,6 +92,7 @@
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.1",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2",
     "webpack": "^5.89.0",
