--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.jsx",
   "scripts": {
     "build-prod": "webpack --config webpack.config.js",
-    "test": "npx sequelize db:drop --env test && npx sequelize db:create --env test  && export NODE_ENV='test' && ts-mocha --config test/.mocharc.json -p test/tsconfig.json",
     "build": "webpack --config webpack.config.js --watch",
+    "test": "npx sequelize db:drop --env test && npx sequelize db:create --env test && export NODE_ENV='test' && ts-node server/db/seed.ts && npx sequelize db:seed --seed testSeedData.js && jest --detectOpenHandles --silent=false",
     "start": "nodemon server/index.ts",
     "start-prod": "ts-node server/index.ts",
-    "seed": "npx sequelize db:drop --env development && npx sequelize db:create && ts-node server/db/seed.ts && npx sequelize db:seed --seed devSeedData.js",
+    "seed-dev": "npx sequelize db:drop --env development && npx sequelize db:create --env development && ts-node server/db/seed.ts && npx sequelize db:seed --seed devSeedData.js",
+    "seed-prod": "npx sequelize db:drop --env production && npx sequelize db:create --env production && ts-node server/db/seed.ts && npx sequelize db:seed --env production --seed prodSeedData.js",
     "scrape": "ts-node server/routes/scrapeEvents"
   },
   "repository": {
@@ -27,9 +28,7 @@
     "@babel/preset-react": "^7.23.3",
     "@mapbox/search-js-react": "^1.0.0-beta.18",
     "@react-icons/all-files": "^4.1.0",
-    "@types/multer": "^1.4.11",
-    "@types/react": "^18.2.41",
-    "@types/react-dom": "^18.2.17",
+    "@testing-library/jest-dom": "^6.4.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cheerio": "^1.0.0-rc.12",
@@ -60,23 +59,28 @@
   "devDependencies": {
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.5",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/register": "^7.23.7",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bootstrap": "^5.2.10",
-    "@types/chai": "^4.3.12",
     "@types/express": "^4.17.21",
-    "@types/mocha": "^10.0.6",
+    "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.3",
+    "@types/react": "^18.2.63",
     "@types/react-datepicker": "^4.19.5",
+    "@types/react-dom": "^18.2.20",
     "@types/react-modal": "^3.16.3",
     "@types/validator": "^13.11.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "autoprefixer": "^10.4.16",
     "babel": "^6.23.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
-    "chai": "^5.1.0",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
@@ -85,16 +89,21 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "global-jsdom": "^24.0.0",
     "html-webpack-plugin": "^5.5.3",
-    "mocha": "^10.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "postcss-loader": "^7.3.3",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
-    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.2",
+    "typescript": "^5.3.3",
+    "undici": "^6.7.0",
     "webpack": "^5.89.0",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
