--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.25.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.6",
     "react-modal": "^3.16.1",
